fix jumbotron mobile padding

--- a/src/mobile.css
+++ b/src/mobile.css
@@ -25,6 +25,10 @@
     font-weight: 700;
     }
 
+    .jumbotron_text {
+        padding-inline: 1rem;
+    }
+
     .company_name {
         font-size: 1.5rem;
     }
